--- a/www/step1.html
+++ b/www/step1.html
@@ -82,7 +82,7 @@
     
 	<!-- BEGIN CONTENT -->
 	<div class="page-content-wrapper">
-		<div class="page-content" style="min-height:873px !important">
+		<div class="page-content" style="min-height:873px !important; background-color:#FFF;">
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="row profile content-responsive">
 				<div class="col-md-12">
@@ -91,15 +91,15 @@
 						<div class="tab-content">
 							<div class="content-responsive">
                                 <div>
-                                    <font size="4" color="white">1. Recommendation for taking a probe</font>
+                                    <font size="4" color="black">1. Recommendation for taking a probe</font>
                                 </div>
                                 <div style="padding:15px;">
-								    <font color="white">
+								    <font color="black">
 										    <b> Always select the most deficient soil samples from the drilling and the sieving process<br /></b>
 								    </font>
                                 </div>
                                 <div style="padding:15px; text-align:center" >
-                                    <img src="img/Step2.jpg" width="75%" height="50%" style="padding-top:10px;"/>
+                                    <img src="img/Step1.jpg" width="75%" height="50%" style="padding-top:10px;"/>
                                 </div>
 							</div>
 					</div>
