--- a/www/step10.html
+++ b/www/step10.html
@@ -82,7 +82,7 @@
     
 	<!-- BEGIN CONTENT -->
 	<div class="page-content-wrapper">
-		<div class="page-content" style="min-height:873px !important">
+		<div class="page-content" style="min-height:873px !important; background-color:#FFF;">
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="row profile content-responsive">
 				<div class="col-md-12">
@@ -91,10 +91,10 @@
 						<div class="tab-content">
 							<div class="content-responsive">
                                 <div>
-                                    <font size="4" color="white">10. Create a diagram</font>
+                                    <font size="4" color="black">10. Create a diagram</font>
                                 </div>
                                 <div style="padding:15px;">
-								    <font color="white">
+								    <font color="black">
 										    <b> The sieving passages in % are associated with their respective corn size and marked in the diagram. Once completed, the marks are linked up with lines, which gives the sieving passage curve. <br /></b>
 								    </font>
                                 </div>
