--- a/www/step12.html
+++ b/www/step12.html
@@ -82,7 +82,7 @@
     
 	<!-- BEGIN CONTENT -->
 	<div class="page-content-wrapper">
-		<div class="page-content" style="min-height:873px !important">
+		<div class="page-content" style="min-height:873px !important; background-color:#FFF;">
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="row profile content-responsive">
 				<div class="col-md-12">
@@ -91,10 +91,10 @@
 						<div class="tab-content">
 							<div class="content-responsive">
                                 <div>
-                                    <font size="4" color="white">12. Look up the type of sand/gravel (Schüttkorngruppe) in DIN 4924 or DIN 19623</font>
+                                    <font size="4" color="black">12. Look up the type of sand/gravel (Schüttkorngruppe) in DIN 4924 or DIN 19623</font>
                                 </div>
                                 <div style="padding:15px;">
-								    <font color="white">
+								    <font color="black">
 										    <b> Select the sand/gravel type according to DIN 4924 or DIN 19623. If in doubt, choose the smaller type <br /></b>
 								    </font>
                                 </div>
