--- a/www/step5.html
+++ b/www/step5.html
@@ -82,7 +82,7 @@
     
 	<!-- BEGIN CONTENT -->
 	<div class="page-content-wrapper">
-		<div class="page-content" style="min-height:873px !important">
+		<div class="page-content" style="min-height:873px !important; background-color:#FFF;">
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="row profile content-responsive">
 				<div class="col-md-12">
@@ -91,10 +91,10 @@
 						<div class="tab-content">
 							<div class="content-responsive">
                                 <div>
-                                    <font size="4" color="white">5. Selection of filters</font>
+                                    <font size="4" color="black">5. Selection of filters</font>
                                 </div>
                                 <div style="padding:15px;">
-								    <font color="white">
+								    <font color="black">
 										    <b> The sieves need to be sorted from the smallest to the largest (20mm). The sieving time of 10 minutes is sufficient <br /></b>
 								    </font>
                                 </div>
