--- a/www/step8.html
+++ b/www/step8.html
@@ -82,7 +82,7 @@
     
 	<!-- BEGIN CONTENT -->
 	<div class="page-content-wrapper">
-		<div class="page-content" style="min-height:873px !important">
+		<div class="page-content" style="min-height:873px !important; background-color:#FFF;">
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="row profile content-responsive">
 				<div class="col-md-12">
@@ -91,10 +91,10 @@
 						<div class="tab-content">
 							<div class="content-responsive">
                                 <div>
-                                    <font size="4" color="white">8.	Table: Determine % of residual (automatise)</font>
+                                    <font size="4" color="black">8.	Table: Determine % of residual (automatise)</font>
                                 </div>
                                 <div style="padding:15px;">
-								    <font color="white">
+								    <font color="black">
 										    <b> The residual weight in % is computed by multiplying the weight in g by 100 and dividing it by the total dry weight of the sample <br /></b>
 								    </font>
                                 </div>
