--- a/www/stuwa.html
+++ b/www/stuwa.html
@@ -105,7 +105,7 @@
         }
 
         function fake() {
-                window.document.location = 'work-flow.html';
+            window.document.location = 'swipe.html';
         }
 
         // A button will call this function
@@ -140,7 +140,7 @@
         //
         function onFail(message) {
             alert(0);
-            window.document.location = 'work-flow.html';
+            window.document.location = 'swipe.html';
             alert(1);
         }
 
