--- a/www/profile.html
+++ b/www/profile.html
@@ -82,7 +82,7 @@
     
 	<!-- BEGIN CONTENT -->
 	<div class="page-content-wrapper">
-		<div class="page-content" style="min-height:873px !important">
+		<div class="page-content" style="min-height:873px !important; background-color:#FFF;">
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="row profile content-responsive">
 				<div class="col-md-12">
@@ -108,11 +108,6 @@
 											</li>
 											<li>
 												<a href="#">
-													 Projects
-												</a>
-											</li>
-											<li>
-												<a href="#">
 													 Messages
 													<span>
 														 3
@@ -122,11 +117,6 @@
 											<li>
 												<a href="#">
 													 Friends
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													 Settings
 												</a>
 											</li>
 										</ul>
