--- a/www/step11.html
+++ b/www/step11.html
@@ -82,7 +82,7 @@
     
 	<!-- BEGIN CONTENT -->
 	<div class="page-content-wrapper">
-		<div class="page-content" style="min-height:873px !important">
+		<div class="page-content" style="min-height:873px !important; background-color:#FFF;">
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="row profile content-responsive">
 				<div class="col-md-12">
@@ -91,10 +91,10 @@
 						<div class="tab-content">
 							<div class="content-responsive">
                                 <div>
-                                    <font size="4" color="white">11. Formulas to determine dg, Fg, and Ds, using the diagram</font>
+                                    <font size="4" color="black">11. Formulas to determine dg, Fg, and Ds, using the diagram</font>
                                 </div>
                                 <div style="padding:15px;">
-								    <font color="white">
+								    <font color="black">
 										    <b> Use the formulas on page 112 and 113 to determine the reference corn diameter dg, the filter factor Fg, and the sand/gravel corn diameter Ds <br /></b>
 								    </font>
                                 </div>
