--- a/www/step6.html
+++ b/www/step6.html
@@ -82,7 +82,7 @@
     
 	<!-- BEGIN CONTENT -->
 	<div class="page-content-wrapper">
-		<div class="page-content" style="min-height:873px !important">
+		<div class="page-content" style="min-height:873px !important; background-color:#FFF;">
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="row profile content-responsive">
 				<div class="col-md-12">
@@ -91,10 +91,10 @@
 						<div class="tab-content">
 							<div class="content-responsive">
                                 <div>
-                                    <font size="4" color="white">6.	Recommendation to weigh the residuals</font>
+                                    <font size="4" color="black">6.	Recommendation to weigh the residuals</font>
                                 </div>
                                 <div style="padding:15px;">
-								    <font color="white">
+								    <font color="black">
 										    <b> The residual samples in the different sieves are put into small containers and weighed <br /></b>
 								    </font>
                                 </div>
