--- a/www/step9.html
+++ b/www/step9.html
@@ -82,7 +82,7 @@
     
 	<!-- BEGIN CONTENT -->
 	<div class="page-content-wrapper">
-		<div class="page-content" style="min-height:873px !important">
+		<div class="page-content" style="min-height:873px !important; background-color:#FFF;">
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="row profile content-responsive">
 				<div class="col-md-12">
@@ -91,7 +91,7 @@
 						<div class="tab-content">
 							<div class="content-responsive">
                                 <div>
-                                    <font size="4" color="white">9.	Table: Siebdurchgang (automatise)</font>
+                                    <font size="4" color="black">9.	Table: Siebdurchgang (automatise)</font>
                                 </div>
                                 <div style="padding:15px;">
 								    <font color="white">
