--- a/www/collection-2.html
+++ b/www/collection-2.html
@@ -43,6 +43,7 @@
     <link href="assets/css/custom.css" rel="stylesheet" type="text/css"/>
     <!-- END THEME STYLES -->
     
+    <link rel="stylesheet" href="css/lightbox.css">
     <link rel="shortcut icon" href="favicon.ico"/>
     
 </head>
@@ -116,81 +117,31 @@
 									<div class="row-collection mix-grid thumbnails">
 										<div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/HS-845-1.jpg" alt="">
-												<div class="mix-details">
-													<h3>Preview Image</h3>
-													<p>
-														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae sentium.
-													</p>
-													<a class="mix-link" href="http://www.liebherr.com/MCF/en-GB/products_mcf.wfw/id-20860-0/measure-metric/tab-13284_107">
-														<i class="fa fa-link"></i>
-													</a>
-													<a class="mix-preview fancybox-button" href="assets_ltb/img/HS-845-1.jpg" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
+                                                <a class="example-image-link" href="assets_ltb/img/HS-845-1.jpg" data-lightbox="example-1">
+                                                    <img class="img-responsive example-image" src="assets_ltb/img/HS-845-1.jpg" alt="image-1" />
+                                                </a>
 											</div>
 										</div>
 										<div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/HS-845-2.jpg" alt="">
-												<div class="mix-details">
-													<h3>Preview Image</h3>
-													<p>
-														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae sentium.
-													</p>
-													<a class="mix-link" href="http://www.liebherr.com/MCF/en-GB/products_mcf.wfw/id-20860-0/measure-metric/tab-13284_107">
-														<i class="fa fa-link"></i>
-													</a>
-													<a class="mix-preview fancybox-button" href="assets_ltb/img/HS-845-2.jpg" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
+												<a class="example-image-link" href="assets_ltb/img/HS-845-1.jpg" data-lightbox="example-1">
+                                                    <img class="img-responsive example-image" src="assets_ltb/img/HS-845-2.jpg" alt="image-1" />
+                                                </a>
 											</div>
 										</div>
 										<div class="col-md-44 mix category_3 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/image-audio.jpg" alt="">
-												<div class="mix-details">
-													<h3>Voice memo</h3>
-													<p>
-														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae sentium.
-													</p>
-													<a class="mix-link">
-														<i class="fa fa-link"></i>
-													</a>
-													<a class="mix-preview fancybox-button" href="assets_ltb/img/image-audio.jpg" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
 											</div>
 										</div>
 										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-5.jpg" alt="">
-												<div class="mix-details">
-													<h3>Hidraulic crawler cranes Duty cycle</h3>
-													<p>
-														 Clamshell operation
-													</p>
-													<a class="mix-preview fancybox-button" href="assets_ltb/pdfs/HS-45-2.pdf" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
 											</div>
 										</div>
 										<div class="col-md-44 mix category_4 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<img class="img-responsive" src="assets_ltb/img/Preview-PDF-6.jpg" alt="">
-												<div class="mix-details">
-													<h3>Hidraulic crawler cranes Duty cycle</h3>
-													<p>
-														 Drugline operator
-													</p>
-													<a class="mix-preview fancybox-button" href="assets_ltb/pdfs/HS-45-2.pdf" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
 											</div>
 										</div>
 								</div>
@@ -232,7 +183,9 @@
 <script src="assets/plugins/excanvas.min.js"></script> 
 <![endif]-->
 
-<script src="assets/plugins/jquery-1.10.2.min.js" type="text/javascript"></script>
+<script src="js/jquery-1.11.0.min.js"></script>
+<script src="js/lightbox.js"></script>
+
 <script src="assets/plugins/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
 <!-- IMPORTANT! Load jquery-ui-1.10.3.custom.min.js before bootstrap.min.js to fix bootstrap tooltip conflict with jquery ui tooltip -->
 <script src="assets/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
