--- a/www/profile-0.html
+++ b/www/profile-0.html
@@ -44,6 +44,7 @@
     <link href="assets/css/custom.css" rel="stylesheet" type="text/css"/>
     <!-- END THEME STYLES -->
     
+	<link rel="stylesheet" href="css/lightbox.css">
     <link rel="shortcut icon" href="favicon.ico"/>
     
 </head>
@@ -695,47 +696,22 @@
 									<div class="row-collection mix-grid thumbnails">
 										<div class="col-md-44 mix category_1 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
-												<img class="img-responsive" src="assets_ltb/img/topic.jpg" alt="">
-												<div class="mix-details">
-													<h3>Problem</h3>
-													<p>
-														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae sentium.
-													</p>
-													<a class="mix-preview fancybox-button" href="assets_ltb/img/Rotary-Drilling-Rig-6.jpg" title="Project Name" data-rel="fancybox-button">
-														<i class="fa fa-search"></i>
-													</a>
-												</div>
+                                                <a class="example-image-link" href="assets_ltb/img/topic.jpg" data-lightbox="example-1">
+                                                    <img class="img-responsive example-image" src="assets_ltb/img/topic.jpg" alt="image-1" />
+                                                </a>
 											</div>
 										</div>
 										<div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<a href="collection-1.html">
-                                                <img class="img-responsive" src="assets_ltb/img/HS-845-1.jpg" alt="">
-												<div class="mix-details">
-													<h3>HS 845 HD Litronic</h3>
-													<p>
-														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae sentium.
-													</p>
-													<a class="mix-link" href="http://www.liebherr.com/MCF/en-GB/products_mcf.wfw/id-21402-0/measure-metric/tab-1054_1522">
-														<i class="fa fa-link"></i>
-													</a>
-												</div>
+                                                    <img class="img-responsive" src="assets_ltb/img/HS-845-1.jpg" alt="">
                                                 </a>
 											</div>
 										</div>
                                         <div class="col-md-44 mix category_2 mix_all" style="display: block; opacity: 1;">
 											<div class="mix-inner">
 												<a href="collection-2.html">
-                                                <img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-6.jpg" alt="">
-												<div class="mix-details">
-													<h3>LB 44</h3>
-													<p>
-														 At vero eos et accusamus et iusto odio digniss imos duc sasdimus qui sint blanditiis prae sentium.
-													</p>
-													<a class="mix-link" href="http://www.liebherr.com/MCF/en-GB/products_mcf.wfw/id-21402-0/measure-metric/tab-1054_1522">
-														<i class="fa fa-link"></i>
-													</a>
-												</div>
+                                                    <img class="img-responsive" src="assets_ltb/img/Rotary-Drilling-Rig-6.jpg" alt="">
                                                 </a>
 											</div>
 										</div>
@@ -778,7 +754,10 @@
 <script src="assets/plugins/excanvas.min.js"></script> 
 <![endif]-->
 
-<script src="assets/plugins/jquery-1.10.2.min.js" type="text/javascript"></script>
+<script src="js/jquery-1.11.0.min.js"></script>
+<script src="js/lightbox.js"></script>
+
+
 <script src="assets/plugins/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
 <!-- IMPORTANT! Load jquery-ui-1.10.3.custom.min.js before bootstrap.min.js to fix bootstrap tooltip conflict with jquery ui tooltip -->
 <script src="assets/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
