--- a/www/options-learning.html
+++ b/www/options-learning.html
@@ -83,7 +83,7 @@
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="tiles content-responsive">
               <div class="inner">
-                <a href= "work-flow.html">
+                <a href= "swipe.html">
 	              	<div class="tile double bg-red">
 						<div class="tile-body">
 	              			<i class="fa fa-pencil-square-o"></i>		
