--- a/www/create.html
+++ b/www/create.html
@@ -42,7 +42,17 @@
     <!-- END THEME STYLES -->
     
     <link rel="shortcut icon" href="favicon.ico"/>
-    
+    <script src="assets/plugins/jquery-1.10.2.min.js" type="text/javascript"></script>
+	<script type="text/javascript" charset="utf-8" src="js/readJson.js"></script>
+	
+	<script>
+		$( document ).ready(function() {
+			var aux = document.getElementById("example");
+			aux.innerHTML = readJsonSubTiles(4);
+		});
+	</script>
+	
+	
 </head>
 
 <!-- BEGIN BODY -->
@@ -82,7 +92,7 @@
 		<div class="page-content">
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="tiles content-responsive">
-              <div class="inner">
+              <div class="inner" id="example">
               	<a href ="createNew.html">
 				<div class="tile double bg-red">
 					<div class="tile-body">
