--- a/www/dont-panic.html
+++ b/www/dont-panic.html
@@ -42,6 +42,16 @@
     <!-- END THEME STYLES -->
     
     <link rel="shortcut icon" href="favicon.ico"/>
+    <script src="assets/plugins/jquery-1.10.2.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/	jquery.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/readJson.js"></script>
+	
+	<script>
+	    $(document).ready(function () {
+	        var aux = document.getElementById("example");
+	        aux.innerHTML = readJsonSubTiles(9);
+	    });
+	</script>
     
 </head>
 
@@ -82,7 +92,7 @@
 		<div class="page-content">
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="tiles content-responsive">
-              <div class="inner">	
+              <div class="inner" id="example">	
               	<a href="first-aid.html">
 				<div class="tile double bg-blue">
 					<div class="tile-body">
@@ -95,7 +105,7 @@
 					</div>
 				</div>
 				</a>
-				<div class="tile  bg-blue">
+				<div class="tile bg-blue">
 					<div class="tile-body">
 						<i class="fa fa-exclamation"></i>
 					</div>
@@ -106,7 +116,7 @@
 					</div>
 				</div>
 				<a href ="index.html">
-						<div class="tile  bg-red">
+						<div class="tile bg-red">
 							<div class="tile-body">
 								<i class="fa fa-home"></i>
 							</div>
