--- a/www/friends-list.html
+++ b/www/friends-list.html
@@ -41,8 +41,18 @@
     <link href="assets/css/custom.css" rel="stylesheet" type="text/css"/>
     <!-- END THEME STYLES -->
     
+	<script src="assets/plugins/jquery-1.10.2.min.js" type="text/javascript"></script>
     <link rel="shortcut icon" href="favicon.ico"/>
-    
+    <script type="text/javascript" src="js/	jquery.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/readJson.js"></script>
+	
+	<script>
+		$( document ).ready(function() {
+			var aux = document.getElementById("example");
+			aux.innerHTML = readJsonSubTiles(1);
+		});
+	</script>
+	
 </head>
 
 <!-- BEGIN BODY -->
@@ -81,71 +91,7 @@
 	<div class="page-content-wrapper">
 		<div class="page-content" style="min-height:428px !important">
 			<!-- BEGIN PAGE CONTENT-->
-			<div class="tiles content-responsive">
-                <a href="profile.html">
-                <div class="tile double bg-red">
-					<div class="tile-body">
-						<img src="assets_ltb/img/profile/profile-1.jpg" width="70px" height="70px" alt="">
-						<h4>John Harrison</h4>
-						<p>
-							 Easily style icon color, size, shadow, and anything that's possible with CSS.
-						</p>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 Class..?
-						</div>
-					</div>
-				</div>
-                </a>
-                <a href="profile-2.html">
-                <div class="tile double bg-red">
-					<div class="tile-body">
-						<img src="assets_ltb/img/profile/profile-2.jpg" width="70px" height="70px" alt="">
-						<h4> Martin Fischer</h4>
-						<p>
-							 Easily style icon color, size, shadow, and anything that's possible with CSS.
-						</p>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 Class..?
-						</div>
-					</div>
-				</div>
-                </a>
-                <a href="profile-3.html">
-                <div class="tile double bg-red">
-					<div class="tile-body">
-						<img src="assets_ltb/img/profile/profile-3.jpg" width="70px" height="70px" alt="">
-						<h4>Allison Sanders</h4>
-						<p>
-							 Easily style icon color, size, shadow, and anything that's possible with CSS.
-						</p>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 Class..?
-						</div>
-					</div>
-				</div>
-                </a>
-                <a href="profile-4.html">
-                <div class="tile double bg-red">
-					<div class="tile-body">
-						<img src="assets_ltb/img/profile/profile-4.jpg" width="70px" height="70px" alt="">
-						<h4>Mike Hundson</h4>
-						<p>
-							 Easily style icon color, size, shadow, and anything that's possible with CSS.
-						</p>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 Class..?
-						</div>
-					</div>
-				</div>
-                </a>
+			<div class="tiles content-responsive" id="example">
 			</div>
 			<!-- END PAGE CONTENT-->
 		</div>
