--- a/www/head-injury.html
+++ b/www/head-injury.html
@@ -42,6 +42,16 @@
     <!-- END THEME STYLES -->
     
     <link rel="shortcut icon" href="favicon.ico"/>
+    <script src="assets/plugins/jquery-1.10.2.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/	jquery.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/readJson.js"></script>
+	
+	<script>
+	    $(document).ready(function () {
+	        var aux = document.getElementById("example");
+	        aux.innerHTML = readJsonSubTilesDegree3(9,0,0);
+	    });
+	</script>
     
 </head>
 
@@ -157,32 +167,8 @@
 						</div>
 					</div>
 				<div class="tiles">
-	              <div class="inner" style="width:300px">	
-		              	<a href="first-aid.html">
-						<div class="tile bg-red">
-							<div class="tile-body">
-								<i class="fa fa-medkit"></i>
-							</div>
-							<div class="tile-object">
-								<div class="name">
-									 Back to first aid
-								</div>
-							</div>
-						</div>
-						</a>
-						<a href ="index.html">
-						<div class="tile  bg-red">
-							<div class="tile-body">
-								<i class="fa fa-home"></i>
-							</div>
-							<div class="tile-object">
-								<div class="name">
-									 Back to Home
-								</div>
-							</div>
-						</div>
-						</a>
-					</div>
+	                <div class="inner" id="example" style="width:300px">	
+				    </div>
 				</div>
 			<!-- END PAGE CONTENT-->
 	</div>
