--- a/www/options-learning.html
+++ b/www/options-learning.html
@@ -41,7 +41,18 @@
     <link href="assets/css/custom.css" rel="stylesheet" type="text/css"/>
     <!-- END THEME STYLES -->
     
+    <script src="assets/plugins/jquery-1.10.2.min.js" type="text/javascript"></script>
     <link rel="shortcut icon" href="favicon.ico"/>
+    <script type="text/javascript" src="js/	jquery.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/readJson.js"></script>
+	
+	<script>
+	    $(document).ready(function () {
+	        var aux = document.getElementById("example");
+	        aux.innerHTML = readJsonSubTilesDegree2(5,1);
+	    });
+	</script>
+
     
 </head>
 
@@ -82,7 +93,7 @@
 		<div class="page-content">
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="tiles content-responsive">
-              <div class="inner">
+              <div class="inner" id="example">
                 <a href= "swipe.html">
 	              	<div class="tile double bg-red">
 						<div class="tile-body">
@@ -90,7 +101,7 @@
 						</div>
 						<div class="tile-object">
 							<div class="name">
-								Learning
+								Learninggg
 							</div>
 						</div>
 	              	</div>
