--- a/www/socialmedia-context-minig-excavator.html
+++ b/www/socialmedia-context-minig-excavator.html
@@ -42,6 +42,16 @@
     <!-- END THEME STYLES -->
     
     <link rel="shortcut icon" href="favicon.ico"/>
+    <script src="assets/plugins/jquery-1.10.2.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/	jquery.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/readJson.js"></script>
+
+	<script>
+	    $(document).ready(function () {
+	        var aux = document.getElementById("example");
+	        aux.innerHTML = readJsonSubTilesDegree2(7,6);
+	    });
+	</script>
     
 </head>
 
@@ -82,57 +92,8 @@
 		<div class="page-content">
 			<!-- BEGIN PAGE CONTENT-->
 			<div class="tiles content-responsive">
-              <div class="inner"  style="width:300px">
-                <a href="https://www.facebook.com/LiebherrConstruction?fref=ts">
-				<div class="tile bg-blue">
-					<div class="tile-body">
-						<i class="fa fa-facebook"></i>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 Facebook
-						</div>
-					</div>
-				</div>
-				</a>
-				<a href="https://www.linkedin.com/company/11057?trk=vsrp_companies_res_name&trkInfo=VSRPsearchId%3A2952827941398695936837%2CVSRPtargetId%3A11057%2CVSRPcmpt%3Aprimary">
-				<div class="tile bg-blue">
-					<div class="tile-body">
-						<i class="fa fa-linkedin"></i>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 LinkedIn
-						</div>
-					</div>
-				</div>
-				</a>
-				<a href="https://twitter.com/Liebherr">
-				<div class="tile bg-blue">
-					<div class="tile-body">
-						<i class="fa fa-twitter"></i>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 Twitter
-						</div>
-					</div>
-				</div>
-				</a>
-				<a href="home-context-rotary-drilling-rig.html">
-				<div class="tile bg-red">
-					<div class="tile-body">
-   						<i class =" fa fa-home"></i>
-					</div>
-					<div class="tile-object">
-						<div class="name">
-							 Home
-						</div>
-					</div>
-				</div>
-				</a>
-
-                            </div>
+                <div class="inner" id="example" style="width:300px">
+                </div>
 			</div>
 			<!-- END PAGE CONTENT-->
 		</div>
