--- a/www/index.html
+++ b/www/index.html
@@ -126,10 +126,10 @@
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
                             <h4 class="modal-title">Ach So! Video Capturing and Annotation</h4>
                         </div>
-                        <!--  <div class="modal-body" align="center">
+                        <div class="modal-body" align="center">
                           <div class="video-responsive">
                             <iframe src="//player.vimeo.com/video/84383004" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/84383004">AchSo!</a> from <a href="http://vimeo.com/medialabhelsinki">Media Lab Helsinki</a> on <a href="https://vimeo.com">Vimeo</a>.</p>                        </div>
-						</div>  -->  
+						</div>
                         <div class="modal-footer">
                             <button type="button" class="btn default" data-dismiss="modal">Close</button>
                         </div>
