--- a/www/index.html
+++ b/www/index.html
@@ -120,7 +120,7 @@
 			</div>
 			
 			<div class="modal fade" id="basic" tabindex="-1" role="basic" aria-hidden="true" style="display: none;">
-                <div class="modal-dialog">
+                <div class="modal-dialog"  style="padding-top:20px">
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
@@ -128,7 +128,8 @@
                         </div>
                         <div class="modal-body" align="center">
                           <div class="video-responsive">
-                            <iframe src="//player.vimeo.com/video/84383004" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/84383004">AchSo!</a> from <a href="http://vimeo.com/medialabhelsinki">Media Lab Helsinki</a> on <a href="https://vimeo.com">Vimeo</a>.</p>                        </div>
+                            <a><iframe width="100%" height="auto" src="http://player.vimeo.com/video/84383004" frameborder="0" allowfullscreen></iframe></a>
+							<p><a href="http://vimeo.com/84383004">AchSo!</a> from <a href="http://vimeo.com/medialabhelsinki">Media Lab Helsinki</a> on <a href="https://vimeo.com">Vimeo</a>.</p>                        </div>
 						</div>
                         <div class="modal-footer">
                             <button type="button" class="btn default" data-dismiss="modal">Close</button>
