--- a/www/swipe-videos.html
+++ b/www/swipe-videos.html
@@ -1,3 +1,13 @@
+<!--
+ * Copyright (c) 2014 KeenThemes, (c) 2014 Andy Tarraco
+ * 
+ * This software uses the Metronic template owned by http://www.keenthemes.com/ and builds on sample
+ * code provided by the theme's creators. The template license does not allow for derivative work to
+ * be distributed, and hence the use of the code below is restricted by the original license. To purchase 
+ * the theme, go to http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes 
+ *
+-->
+
 <!doctype html>
 <html lang="en">
 <head>
