--- a/www/options-learning.html
+++ b/www/options-learning.html
@@ -1,5 +1,5 @@
 <!--
- * Copyright (c) 2014 KeenThemes, (c) 2014 Owen Grey, Gilbert Peffer, Andy Tarracona
+ * Copyright (c) 2014 KeenThemes, (c) 2014 Andy Tarraco
  * 
  * This software uses the Metronic template owned by http://www.keenthemes.com/ and builds on sample
  * code provided by the theme's creators. The template license does not allow for derivative work to
